--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-emotion": "^9.2.12",
     "react-helmet": "^5.2.0",
     "react-icons": "^3.2.0",
+    "react-mail-form": "^1.0.1",
     "react-typography": "^0.16.13",
     "typography": "^0.16.17"
   },
